All set to try on add Experience logic

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "gsap": "^3.12.7",
     "three": "^0.172.0"
   }
