--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "eventemitter3": "^5.0.1",
     "gsap": "^3.12.7",
+    "lil-gui": "^0.20.0",
     "three": "^0.172.0"
   }
 }
